# omahaAOFsolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  Omaha AOF solver.sln  OmahaSolver.sln  README.md  premake5.lua  vcpkg-configuration.json  vcpkg.json
3rd/PHeval/include/phevaluator/: card.h
App/: App.vcxproj  App.vcxproj.filters  app_build.lua
App/src/: Application.cpp  Application.h  Constants.h  HandFilter.h  Tests.h  main.cpp
App/src/UI/: PanelUI.h  RenderCursor.h  WindowPanel.cpp  WindowPanel.h
App/src/UI/Special/: HandEvItemUI.h
App/src/UI/Tabs/: OptionsTabUI.cpp  SolverTabUI.h  ViewerTabUI.cpp
App/src/UI/Widgets/: ButtonUI.h  InputUI.h  LabelUI.h  NodeSelectorUI.cpp  NodeSelectorUI.h  RadioButtonUI.h  ScrollHandItemUI.h  ScrollViewUI.cpp  ScrollViewUI.h  TrainerUI.cpp  TrainerUI.h  WidgetUI.h
Examples/App/Solutions/: 7s7d7h_2p.sol
OmahaSolver/: OmahaSolver.vcxproj  OmahaSolver.vcxproj.filters
OmahaSolver/src/: Core.h  Deck.h  Node.h  Range.cpp  Solution.h  Solver.cpp  Solver.h  Utils.cpp  Utils.h  main.cpp
OmahaSolver/x64/Debug/: OmahaSolver.exe.recipe  main.obj.enc  range.obj.enc  solver.obj.enc  utils.obj.enc  vc143.idb
OmahaSolver/x64/Debug/OmahaSolver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OmahaSolver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Solver/: Solver.vcxproj  Solver.vcxproj.filters  solver_build.lua
Solver/src/: CardCode.h  Core.h  Deck.h  Node.cpp  Node.h  Position.h  RandomGenerator.h  Range.cpp  Range.h  Situation.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  ThreadPool.h  Utils.cpp  Utils.h  main.cpp
Solver/src/Data/: Solution.cpp  Solution.h  SolverData.h  SolverParams.h  SolverResult.h  ThreadData.h  WeightedHand.h
Solver/src/Filter/: FilterNode.h  HandFilter.h
Solver/src/Solver/: Node.cpp  Node.h  PokerUtils.cpp  PokerUtils.h  Solver.cpp  Solver.h
SolverApp/: CMakeLists.txt
SolverApp/src/: Application.cpp  Application.h  Constants.h  Event.h  RenderUtils.h  Tests.h  main.cpp
SolverApp/src/UI/: IDrawable.h  WindowPanel.cpp  WindowPanel.h
SolverApp/src/UI/Tabs/: OptionsTabUI.cpp  OptionsTabUI.h  SolverTabUI.cpp  ViewerTabUI.h
SolverApp/src/UI/Widgets/: ButtonUI.h  LabelUI.h  NodeSelectorUI.cpp  NodeSelectorUI.h  ScrollHandItemUI.h  ScrollViewUI.cpp  TrainerUI.h
SolverLib/: CMakeLists.txt
SolverLib/include/: Core.h  PokerUtils.h  RandomGenerator.h
SolverLib/include/Data/: Solution.h  SolverData.h
SolverLib/include/Filter/: HandFilter.h
SolverLib/src/: Solver.cpp
SolverLib/src/Data/: Solution.cpp
Tests/: tests_build.lua
Tests/src/: FilterTests.h  main.cpp
bin-int/Debug-windows-x86_64/Solver/: Solver.exe.recipe  Solver.ilk  vc143.idb
bin-int/Debug-windows-x86_64/Solver/Solver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Debug-windows-x86_64/Solver/microsoft/STL/: std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
bin-int/Release-windows-x86_64/App/: App.exe.recipe
bin-int/Release-windows-x86_64/App/App.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Release-windows-x86_64/App/microsoft/STL/: std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
bin-int/Release-windows-x86_64/Solver/: Solver.exe.recipe
bin-int/Release-windows-x86_64/Solver/Solver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Solver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Release-windows-x86_64/Solver/microsoft/STL/: std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
